# gpt-cursor-runner

./: --  .cursor-config.json  .cursor-safeguards.json  .cursor-systems-go.json  .cursorrules  .dockerignore  .eslintcache  .eslintignore  .eslintignore.local  .eslintrc.js  .flake8  .ghost-md-status.json  .gitattributes  .gitignore  .gitignore.executable  .gitkeep-validations  .markdownlint.json  .patchrc  .pre-commit-config.yaml  .tarignore  ADMIN_DASHBOARD.md  BRAUN_AUTOEXECUTION_ANALYSIS.md  CLOUDFLARE_TUNNEL_MIGRATION.md  CODEOWNERS  COMPREHENSIVE_GHOST_RUNNER_AUDIT.md  CURSOR_DEVELOPMENT_GUIDE.md  Dockerfile  ESLINT_FIXES_SUMMARY.md  ESLINT_SETUP_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SYNTAX_FIX_COMPLETE.md  FINAL_SYNTAX_FIX_SUMMARY.md  FLYio_GPT_Cursor_Deployment_Summary.md  GHOST_BRAUN_PATCH_DELIVERY_FIX.md  GITHUB_DEPLOYMENT.md  GPT_CURSOR_RUNNER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINTER_FIX_SUMMARY.md  MANUAL_FIX_LOG.md  (+166 more)
.cursor/: cursor.json
.github/: required-checks.json
Free/: README.md
Pro/: README.md
Team/: README.md
__SoT__/: ACCEPTANCE-GATES.json  CONTRACTS.md  CONTRACTS.yml  PATCH-SCHEMA.json  POLICIES.md  README.md  ROADMAP.md  RUBRIC.json  RUBRIC.yml  SYSTEMS-MASTER.md  SoT-Execution-Contract.yml  alignment-report.md  execution-ops.yml  self_evaluation_rubric.yml
__tests__/: sanity.test.ts
_gpt5intake/: CONTENTS.md  DESIRED_STATE.md  README.md
analytics/: predict.json
assets/: gpt_runner_command_stack.js
commands/: oneshot_post_write_test.cmd.completed  queue_patch_3134.cmd.processing  test-command.cmd.completed
config/: .cursor-config.json  .dockerignore  .gitignore  .orign-dockerignore.bak  Dockerfile  STRICT_TICKER.json  config.json  ecosystem.config.js  ecosystem.g2o.only.config.js  eslint.ignore.P2.11.00.json  eslint.overrides.cli.json  eslint.phase.P2.11.00.json  eslint.quarantine.manifest.json  eslint.scope.manifest.json  executor_sla_policy.json  failover.json  feature-bundle_ui-dashboard_slash-preview_release.json  g2o-allowed-commands.json  g2o-critical-allowlist.json  g2o-patch.schema.json  logs.json  nginx.conf  package-lock.json  performance_monitor_config.json  phase3_ml_config.json  pm2.allowlist.json  policy.json  ports.json  production.js  pyproject.toml  queue_hygiene_policy.json  setup.py  simple-tunnel-config.yml  slack-app-manifest-fly.dev.yaml  slack-app-manifest-thoughtmarks.app.yaml  slack-app-manifest-v2.yaml  slack-app-manifest.yaml  super_autolinter_config.json  system_monitor_config.json  tunnel-config.yml  (+2 more)
core/: index.js  start-MAIN.sh  webhook-handler.js  webhook-thoughtmarks-server.js
dashboard/: app.py  log-reader.json  start.sh
data/: event-log.json  patch-log.json  patch-metrics.json  test_ping.json
deployment/: deploy-ghost-p7-remaining.sh
docs/: ARCHITECTURE.md  BRIDGE_INTEGRATION.md  CHANGELOG.md  CLOUDFLARE_TUNNEL_MIGRATION.md  COMMERCIAL_AUDIT_ROADMAP.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_ORGANIZATION_SUMMARY.md  COMPREHENSIVE_SELF_REGULATING_SYSTEM.md  CURRENT_SYSTEMS_CONFIGURATION.md  CURSOR_DEVELOPMENT_GUIDE.md  DAEMON_STATUS_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT_AND_REORGANIZATION_PLAN.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  ESSENTIAL_SLACK_COMMANDS.md  FINAL_VERIFICATION_REPORT.md  GETTING_STARTED.md  GHOST_RUNNER_STATUS_SUMMARY.md  GPT-PINNED-HANDOFF.yml  LINTING_FIXES_COMPLETE_SUMMARY.md  ORGANIZATION_PLAN.md  ORGANIZATION_SUMMARY.md  PATCH_BASED_IMPLEMENTATION.md  PERSONALIZATION_PROFILE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASES_4-6_CRITICAL_EVALUATION.md  PHASE_6_COMPLETION_REPORT.md  PHASE_7B_CRITICAL_EVALUATION.md  PORT_CONFIGURATION_ANALYSIS.md  QUICK_START_GRANITE_MIGRATION.md  README.md  SANITIZATION_PLAN.md  SECRETS_MANAGEMENT.md  SELF_REGULATING_SYSTEM_PLAN.md  SLACK_COMMANDS_IMPLEMENTATION.md  SLACK_COMMAND_CHEATSHEET.md  SLACK_DASHBOARD_COMPLETION_SUMMARY.md  SLACK_DISPATCH_USAGE.md  SLASH_COMMAND_MANIFEST.md  (+16 more)
gpt_cursor_runner/: __init__.py  admin_config.py  admin_dashboard.py  apply_patch.py  audit_logger.py  config_manager.py  cors_config.py  dashboard.py  demo_workflow.py  error_handler.py  error_recovery.py  event_logger.py  event_viewer.py  file_watcher.py  health_aggregator.py  health_endpoints.py  hybrid_bundle_init.md  main.py  patch_classifier.py  patch_metrics.py  patch_reverter.py  patch_runner.py  patch_schema.json  patch_viewer.py  patch_watchdog.py  post_to_webhook.py  process_cleanup.py  rate_limiter.py  read_patches.py  request_validator.py  resource_monitor.py  sequential_processor.py  server_fixes.py  slack_dispatch.py  slack_handler.py  slack_handler.py.rewrite  slack_proxy.py  summary_manager.py  unified_processor.py  webhook_handler.py
gpt_cursor_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
handlers/: handleApproveScreenshot.js  handleCursorMode.js  handleCursorSlackDispatch.js  handleDashboard.js  handleInterrupt.js  handleManualAppend.js  handlePatchRevert.js  handleTheme.js  (+9 more)
(+3561 files in other folders)
