[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-cursor-runner"
version = "0.1.0"
description = "A Flask-based webhook handler for processing GPT-generated hybrid blocks and saving them as JSON patches"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sawyer", email = "sawyer@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.1.1",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "pyngrok>=7.2.11",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
gpt-cursor-runner = "gpt_cursor_runner.main:run_server"

[project.urls]
Homepage = "https://github.com/yourusername/gpt-cursor-runner"
Repository = "https://github.com/yourusername/gpt-cursor-runner"
Issues = "https://github.com/yourusername/gpt-cursor-runner/issues"

[tool.setuptools]
packages = ["gpt_cursor_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 